--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - flake8 wal.py
-    - pylint wal.py
+    - flake8 wal
+    - pylint wal
