--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - "3.6"
 
 install:
-    - pip install -r requirements.txt
+    - pip install flake8 pylint
 
 script:
     - flake8 wal
