--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
     - pip install flake8 pylint
 
 script:
-    - flake8 pywal
-    - pylint pywal
+    - flake8 pywal setup.py
+    - pylint pywal setup.py
