--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
     - "3.6"
 
+before_install:
+    - sudo apt-get -qq update
+    - sudo apt-get install -y imagemagick
+
 install:
     - pip install flake8 pylint
 
