--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - sudo apt-get install -y imagemagick
 
 install:
-    - pip install flake8 pylint
+    - pip install flake8 pylint dbus-python
 
 script:
     - flake8 pywal tests setup.py
