--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y imagemagick
+    - sudo apt-get install -y imagemagick dbus
 
 install:
     - pip install flake8 pylint dbus-python
