--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 script:
     - flake8 pywal tests setup.py
     - pylint pywal tests setup.py
-    - coverage run --source=my_module/ ./setup.py test
+    - coverage run --source=pywal/ ./setup.py test
 
 after_success:
 - codecov
