--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,9 @@ before_install:
     - sudo apt-get install -y imagemagick
 
 install:
-    - pip install flake8 pylint codecov
+    - pip install flake8 pylint
 
 script:
     - flake8 pywal tests setup.py
     - pylint pywal tests setup.py
-    - coverage run --source=pywal/ ./setup.py test
-
-after_success:
-- codecov
+    - python setup.py test
