templates: Cleanup gtk2 template

--- a/pywal/templates/colors-gtk2.rc
+++ b/pywal/templates/colors-gtk2.rc
@@ -1,1 +1,19 @@
-gtk-color-scheme = "bg_color:{color0}\nfg_color:{color15}\nbase_color:{color0}\ntext_color:{color15}\nselected_bg_color:{color2}\nselected_fg_color:{color0}\ntooltip_bg_color:{color2}\ntooltip_fg_color:{color15}\ntitlebar_bg_color:{color2}\ntitlebar_fg_color:{color15}\nmenubar_bg_color:{color0}\nmenubar_fg_color:{color15}\ntoolbar_bg_color:{color0}\ntoolbar_fg_color:{color15}\nmenu_bg_color:{color0}\nmenu_fg_color:{color15}\npanel_bg_color:{color0}\npanel_fg_color:{color15}\nlink_color:{color2}"
+gtk-color-scheme = "bg_color: {color0}"
+gtk-color-scheme = "fg_color: {color15}"
+gtk-color-scheme = "base_color: {color0}"
+gtk-color-scheme = "text_color: {color15}"
+gtk-color-scheme = "selected_bg_color: {color2}"
+gtk-color-scheme = "selected_fg_color: {color0}"
+gtk-color-scheme = "tooltip_bg_color: {color2}"
+gtk-color-scheme = "tooltip_fg_color: {color15}"
+gtk-color-scheme = "titlebar_bg_color: {color2}"
+gtk-color-scheme = "titlebar_fg_color: {color15}"
+gtk-color-scheme = "menubar_bg_color: {color0}"
+gtk-color-scheme = "menubar_fg_color: {color15}"
+gtk-color-scheme = "toolbar_bg_color: {color0}"
+gtk-color-scheme = "toolbar_fg_color: {color15}"
+gtk-color-scheme = "menu_bg_color: {color0}"
+gtk-color-scheme = "menu_fg_color: {color15}"
+gtk-color-scheme = "panel_bg_color: {color0}"
+gtk-color-scheme = "panel_fg_color: {color15}"
+gtk-color-scheme = "link_color: {color2}"
