--- a/pywal/templates/colors-gtk2.rc
+++ b/pywal/templates/colors-gtk2.rc
@@ -1,19 +1,19 @@
-gtk-color-scheme = "bg_color: {color0}"
-gtk-color-scheme = "fg_color: {color15}"
-gtk-color-scheme = "base_color: {color0}"
-gtk-color-scheme = "text_color: {color15}"
-gtk-color-scheme = "selected_bg_color: {color2}"
-gtk-color-scheme = "selected_fg_color: {color0}"
-gtk-color-scheme = "tooltip_bg_color: {color2}"
-gtk-color-scheme = "tooltip_fg_color: {color15}"
-gtk-color-scheme = "titlebar_bg_color: {color2}"
-gtk-color-scheme = "titlebar_fg_color: {color15}"
-gtk-color-scheme = "menubar_bg_color: {color0}"
-gtk-color-scheme = "menubar_fg_color: {color15}"
-gtk-color-scheme = "toolbar_bg_color: {color0}"
-gtk-color-scheme = "toolbar_fg_color: {color15}"
-gtk-color-scheme = "menu_bg_color: {color0}"
-gtk-color-scheme = "menu_fg_color: {color15}"
-gtk-color-scheme = "panel_bg_color: {color0}"
-gtk-color-scheme = "panel_fg_color: {color15}"
-gtk-color-scheme = "link_color: {color2}"
+gtk-color-scheme = "background: {background}"
+gtk-color-scheme = "foreground: {foreground}"
+
+gtk-color-scheme = "color0: {color0}"
+gtk-color-scheme = "color1: {color1}"
+gtk-color-scheme = "color2: {color2}"
+gtk-color-scheme = "color3: {color3}"
+gtk-color-scheme = "color4: {color4}"
+gtk-color-scheme = "color5: {color5}"
+gtk-color-scheme = "color6: {color6}"
+gtk-color-scheme = "color7: {color7}"
+gtk-color-scheme = "color8: {color8}"
+gtk-color-scheme = "color9: {color9}"
+gtk-color-scheme = "color10: {color10}"
+gtk-color-scheme = "color11: {color11}"
+gtk-color-scheme = "color12: {color12}"
+gtk-color-scheme = "color13: {color13}"
+gtk-color-scheme = "color14: {color14}"
+gtk-color-scheme = "color15: {color15}"
