--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ os:
     - "osx"
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install imagemagick; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get -qq update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install -y imagemagick; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew update; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew install imagemagick; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y imagemagick; fi
 
 install:
     - pip install flake8 pylint
