--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,20 @@ matrix:
       language: python
       sudo: required
       python: 3.5
+      before_install:
+        - sudo apt-get -qq update
+        - sudo apt-get -y install imagemagick
     - os: linux
       language: python
       sudo: required
       python: 3.6
+      before_install:
+        - sudo apt-get -qq update
+        - sudo apt-get -y install imagemagick
     - os: osx
       language: generic
-before_install: ./travis-install.sh
+      before_install:
+        - brew install imagemagick
+        - brew install python3
+        - brew link --overwite python3
 script: python3 setup.py test
