--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,23 @@
-language: python
-python:
-    - "3.5"
-    - "3.6"
-
-os:
-    - "linux"
-    - "osx"
-
-before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew install imagemagick; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y imagemagick; fi
-
-install:
-    - pip install flake8 pylint
-
-script:
-    - flake8 pywal tests setup.py
-    - pylint pywal tests setup.py
-    - python setup.py test
+matrix:
+  include:
+    - os: linux
+      language: python
+      sudo: required
+      python: 3.5
+      before_install:
+        - sudo apt-get -qq update
+        - sudo apt-get -y install imagemagick
+    - os: linux
+      language: python
+      sudo: required
+      python: 3.6
+      before_install:
+        - sudo apt-get -qq update
+        - sudo apt-get -y install imagemagick
+    - os: osx
+      language: generic
+      before_install:
+        - brew install imagemagick
+        - brew install python3
+        - brew link --overwite python3
+script: python3 setup.py test
