--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,8 @@ matrix:
         - sudo apt-get -qq update
         - sudo apt-get -y install imagemagick
     - os: osx
-      language: generic
+      language: python
+      python: 3.6
       before_install:
         - brew install imagemagick
-        - brew install python3
-        - brew link --overwite python3
 script: python3 setup.py test
