--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: python
-python:
-    - "3.5"
-    - "3.6"
 
-os:
-    - "linux"
-    - "osx"
+matrix:
+    include:
+        - os: osx
+          language: generic
+          before_install:
+              - brew update
+              - brew install imagemagick
+              - brew install python3
+              - virtualenv env -p python3
+              - source env/bin/activate
+        - os: linux
+          python: 3.5
+        - os: linux
+          python: 3.6
+
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo brew install imagemagick; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y imagemagick; fi
 
