travis: Fix macOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ matrix:
         - os: osx
           language: generic
           before_install:
-              - brew update
               - brew install imagemagick
               - brew install python3
-              - virtualenv env -p python3
-              - source env/bin/activate
+              - brew link --overwite python3
         - os: linux
           python: 3.5
         - os: linux
