--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
               - brew install imagemagick
               - brew install python3
               - brew link --overwite python3
+              - pip3 install flake8 pylint
         - os: linux
           python: 3.5
         - os: linux
