Fix yaml template
Replace `color"` with`color1`

--- a/pywal/templates/colors.yml
+++ b/pywal/templates/colors.yml
@@ -7,7 +7,7 @@ special:
 
 colors:
     color0: "{color0}"
-    color": "{color1}"
+    color1: "{color1}"
     color2: "{color2}"
     color3: "{color3}"
     color4: "{color4}"
