--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [BASIC]
-good-names=i,j,k,n,x,y,fg,bg,r,g,b,i3
+good-names=i,j,k,n,x,y,fg,bg,r,g,b,i3,r1,r2,r3,g1,g2,g3,b1,b2,b3
 
 [MESSAGES CONTROL]
 # inconsistent-return-statements:
