--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y imagemagick; fi
 
 install:
-    - pip install flake8 pylint pyroma
+    - pip install flake8 pylint colorthief
 
 script:
     - flake8 pywal tests setup.py
