misc: Add missing files to the manifest.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include pywal/templates/*
 include pywal/backends/*
 include pywal/scripts/*
 include pywal/colorschemes/*
+include pywal/colorschemes/light/*
+include pywal/colorschemes/dark/*
 include tests/*
 include tests/test_files/*
 include .pylintrc
