--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,5 @@
-include pywal/templates/*
-include pywal/backends/*
-include pywal/scripts/*
-include pywal/colorschemes/*
-include pywal/colorschemes/light/*
-include pywal/colorschemes/dark/*
-include tests/*
-include tests/test_files/*
+recursive-include pywal/*
+recursive-include tests/*
 include .pylintrc
 include README.md
 include LICENSE.md
