--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,11 @@
-recursive-include pywal/*
-recursive-include tests/*
+include pywal/templates/*
+include pywal/backends/*
+include pywal/scripts/*
+include pywal/colorschemes/*
+include pywal/colorschemes/light/*
+include pywal/colorschemes/dark/*
+include tests/*
+include tests/test_files/*
 include .pylintrc
 include README.md
 include LICENSE.md
