--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ matrix:
     include:
         - python: 3.5
         - python: 3.6
-        - python: 3.7
-          dist: xenial
-          sudo: true
+        # - python: 3.7
+        #   dist: xenial
+        #   sudo: true
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
