general: fix lint

--- a/.pylintrc
+++ b/.pylintrc
@@ -10,7 +10,7 @@ good-names=i,j,k,n,x,y,fg,bg,r,g,b,i3,r1,r2,r3,g1,g2,g3,b1,b2,b3,h,s,v,l
 # too-many-statements:
 #   Disabled as it's a non-issue and only occurs in the
 #   process_args() function.
-disable=inconsistent-return-statements,too-many-branches,too-many-statements
+disable=inconsistent-return-statements,too-many-branches,too-many-statements,too-many-return-statements
 
 [SIMILARITIES]
 ignore-imports=y
