Fix changing kitty's colors. Kitty must be run with -1 or --single-instance to affect all open kitty windows. Only works when wal is run from kitty.

--- a/pywal/templates/colors-kitty.conf
+++ b/pywal/templates/colors-kitty.conf
@@ -2,6 +2,11 @@ foreground   {foreground}
 background   {background}
 cursor       {cursor}
 
+active_tab_foreground     {foreground}
+active_tab_background     {background}
+inactive_tab_foreground   {background}
+inactive_tab_background   {foreground}
+
 color0       {color0}
 color8       {color8}
 color1       {color1}
