Add color config for internal window borders

--- a/pywal/templates/colors-kitty.conf
+++ b/pywal/templates/colors-kitty.conf
@@ -7,6 +7,10 @@ active_tab_background     {background}
 inactive_tab_foreground   {background}
 inactive_tab_background   {foreground}
 
+active_border_color	{foreground}
+inactive_border_color	{background}
+bell_border_color	{color1}
+
 color0       {color0}
 color8       {color8}
 color1       {color1}
