--- a/pywal/templates/colors-kitty.conf
+++ b/pywal/templates/colors-kitty.conf
@@ -2,10 +2,10 @@ foreground   {foreground}
 background   {background}
 cursor       {cursor}
 
-active_tab_foreground     {foreground}
-active_tab_background     {background}
-inactive_tab_foreground   {background}
-inactive_tab_background   {foreground}
+active_tab_foreground     {background}
+active_tab_background     {foreground}
+inactive_tab_foreground   {foreground}
+inactive_tab_background   {background}
 
 active_border_color	{foreground}
 inactive_border_color	{background}
