--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y imagemagick; fi
 
 install:
-    - pip install flake8 pylint
+    - pip install flake8 pylint jinja2
 
 script:
     - flake8 pywal tests setup.py
